--- a/中文说明.md
+++ b/中文说明.md
@@ -3,126 +3,16 @@
 从Docker Hub拉取镜像 
 
 ```
-docker pull bugazelle/web-visual-testing
+docker pull juanwangak/vnc-nightwatch
 ```
 
-![](noVNC_Sample.gif)
-
 ## 内容
-- [支持的视觉测试工具](#支持的视觉测试工具)
-- [特色: NoVNC, Jenkins, CNTLM](#特色)
 - [如何运行测试](#如何运行测试)
-- [BackstopJS示例](#BackstopJS示例)
-- [Gemini示例](#Gemini示例)
 - [Hermione示例](#Hermione示例)
 - [系统信息](#系统信息)
 - [值得一看的其他内容](#值得一看的其他内容)
+   
 
-
-## 支持的视觉测试工具
-
-1. [BackstopJS: 4.3.2](https://github.com/garris/BackstopJS)
-2. [Gemini: 7.5.1](https://github.com/gemini-testing/gemini)
-3. [Hermione: 2.13.1](https://github.com/gemini-testing/hermione)
-
-> Chrome/ChromeDriver: 77.0.3865.120/77.0.3865.40, Firefox/Geckodriver: 69.0.3/0.26.0, Selenium Sever: 3.9.1
-> - 如果需要特定的chrome/chromedirver, firefox/geckodriver 和 selenium server版本，提一个单子给我，我帮你build镜像
-
-## 特色
-1. 支持noVNC
-   
-   可以像操作虚拟机一样操作docker容器，让测试更加的可视化，同时也方便调试脚本: [http://127.0.0.1:6901/?password=vncpassword](http://127.0.0.1:6901/?password=vncpassword)
-   
-   更多关于noVNC的信息: [docker-headless-vnc-container](https://github.com/Bugazelle/docker-headless-vnc-container)
-     
-   **-e VNC_RESOLUTION=1400x900**: 设置分辨率为1400x900
-   
-   **-p 6901:6901**: 映射容器6901端口到本地6901，6901属于vnc客户端端口
-   
-   **-p 5901:5901**: 映射容器5901端口到本地5901，5901属于vnc服务器端口
-   
-   **-v $(pwd):/tmp**: 映射当前路径下的所有问点到docker容器中的/tmp目录
-   
-   ```
-   docker run \
-       -e VNC_RESOLUTION=1400x900 \
-       -p 6901:6901 \
-       -p 5901:5901 \
-       -v $(pwd):/tmp \
-       bugazelle/web-visual-testing
-   ```
-   
-2. 支持Jenkins
-
-   可以将docker容器作为一个jenkins agent，支持的环境变量有：
-   
-   **JENKINS_MASTER_URL**: Jenkins master的地址, 默认: http://127.0.0.1:8080
-   
-   **JENKINS_SLAVE_KEY**: Jenkins slave的密钥，比如: bb23de4d485447d3f8b73aefa268e687d5660dad553eb4534ff2ae369d7849c6
-   
-   **JENKINS_SLAVE_NAME**: Jenkins slave的名字
-   
-   **JENKINS_AGENT_WORKDIR**: Jenkins agent的工作空间, 默认: /home/jenkins
-   
-   提供3中方法连接Jenkins Master:
-   
-   - 推荐: `jenkins-run.sh`
-   
-   - `jenkins-agent -url ${JENKINS_MASTER_URL} ${JENKINS_SLAVE_KEY} ${JENKINS_SLAVE_NAME}`
-   
-   - `java -jar /usr/share/jenkins/agent.jar -jnlpUrl ${JENKINS_MASTER_URL}/computer/slave1/slave-agent.jnlp -secret ${JENKINS_SLAVE_KEY}`
-   
-   ``` 
-   docker run \
-       -e VNC_RESOLUTION=1400x900 \
-       -p 6901:6901 \
-       -p 5901:5901 \
-       -v $(pwd):/tmp \
-       -e JENKINS_MASTER_URL=http://172.17.0.1:8080 \
-       -e JENKINS_SLAVE_KEY=1f27b72ec9cf59711788e8de7d1219766381c1ea0406b5f64de3bb6dcd6df913 \
-       -e JENKINS_SLAVE_NAME=slave1 \
-       bugazelle/web-visual-testing jenkins-run.sh
-   ```
-   
-   关于如何通过docker平台搭建jenkins环境，可以参考: [jenkins/README.md](jenkins/README.md)
-   
-3. 支持CNTLM
-
-   如果处于NTLM代理的环境中，可以使用CNTLM提供二级代理. 更多关于CNTLM: [https://linux.die.net/man/1/cntlm](https://linux.die.net/man/1/cntlm)
-   
-   提供的环境变量有:
-   
-   **CNTLM_PROXY_DOMAIN**: 默认: global
-   
-   **CNTLM_PROXY_AUTH**: 默认: NTLMv2
-   
-   **CNTLM_PROXY_USER**: 没有默认值，请查看cntlm.conf.tmpl
-   
-   **CNTLM_PROXY_KEY**: 没有默认值，请查看cntlm.conf.tmpl. 使用 `cntlm -u YourUserName -H` 可以获得密钥.
-   
-   **CNTLM_PROXY_SERVER**: 没有默认值，请查看cntlm.conf.tmpl. 如果有多个代理服务器，使用: CNTLM_PROXY_SERVER_1, CNTLM_PROXY_SERVER_2, CNTLM_PROXY_SERVER_3, CNTLM_PROXY_SERVER_4, CNTLM_PROXY_SERVER_5
-   
-   **CNTLM_NO_PROXY**: 请查看cntlm.conf.tmpl. 默认: localhost, 127.0.0.*, 10.*, 192.168.*, 172.17.*
-   
-   **如何运行**: `cntlm-run.sh`, 接着二级代理就在本地可用了: [http://127.0.0.1:3128](http://127.0.0.1:3128)
- 
-   ```
-   docker run \
-       -e VNC_RESOLUTION=1400x900 \
-       -p 6901:6901 \
-       -p 5901:5901 \
-       -v $(pwd):/tmp \
-       -e CNTLM_PROXY_DOMAIN=global \
-       -e CNTLM_PROXY_AUTH=NTLMv2 \
-       -e CNTLM_PROXY_USER=YourUserName \
-       -e CNTLM_PROXY_KEY=YourKey \
-       -e CNTLM_PROXY_SERVER=TheProxyServer, like my.proxy:3128 \
-       bugazelle/web-visual-testing /bin/bash -c "cntlm-run.sh; \
-          export http_proxy=http://127.0.0.1:3128; \
-          export https_proxy=http://127.0.0.1:3128; \
-          wget --no-check-certificate http://apache.org; "
-   ```
-   
 ## 如何运行测试
 
 1. 调试模式 - 调脚本的时候用
@@ -132,15 +22,15 @@ docker pull bugazelle/web-visual-testing
       > 注意: 有时候 chromedriver, geckdriver 在docker容器中抽风, 添加 `--privileged -v /dev/shm:/dev/shm --shm-size 2048m` 解决问题
    
        ``` 
-       docker run \
-           -e VNC_RESOLUTION=1400x900 \
-           -p 6901:6901 \
-           -p 5901:5901 \
-           -v $(pwd):/tmp \
-           --privileged \
-           -v /dev/shm:/dev/shm \
-           --shm-size 2048m \
-           bugazelle/web-visual-testing
+       docker run \          
+         -e VNC_RESOLUTION=1600x1000 \
+         -p 6901:6901 \
+         -p 5901:5901 \
+         --privileged \
+         -v $(pwd):/tmp \
+         -v /dev/shm:/dev/shm \
+         --shm-size 2048m \
+         juanwangak/vnc-nightwatch:1.0
        ```
    
    2) 访问 [http://localhost:6901/?password=vncpassword/](http://localhost:6901/?password=vncpassword/) to the vnc env.
@@ -154,52 +44,6 @@ docker pull bugazelle/web-visual-testing
       backstop reference;
       ```
       
-2. 直接跑 - 正式跑测试时候用
-
-   ``` 
-   docker run \
-       -e VNC_RESOLUTION=1400x900 \
-       -p 6901:6901 \
-       -p 5901:5901 \
-       -v $(pwd):/tmp \
-       --privileged \
-       -v /dev/shm:/dev/shm \
-       --shm-size 2048m \
-       bugazelle/web-visual-testing \
-           /bin/bash -c "cd /tmp/samples/BackstopJS/Chrome/BackstopJS_PuppeteerEngine_SimulateCookie_UserActions; \
-           backstop reference;"
-    ```
-
-## BackstopJS示例
-   
-   - [Chrome - 模拟用户行为和Cookie](samples/BackstopJS/Chrome/BackstopJS_PuppeteerEngine_SimulateCookie_UserActions/中文说明.md)
-   - [Chrome - 模拟不同的设备](samples/BackstopJS/Chrome/BackstopJS_PuppeteerEngine_SimulateDevices/中文说明.md)
-   - **Firefox**: Backstop不是很友好的支持，更多查看：[issue-311](https://github.com/garris/BackstopJS/issues/311)
-
-   > 注意: PhantomJS过气了，使用chrome headless，firefox headless替代
-
-## Gemini示例
-
-   - [Chrome -模拟用户行为](samples/Gemini/Chrome/Gemini_SimulateUserActions/中文说明.md)
-   - [Chrome - 模拟不同设备](samples/Gemini/Chrome/Gemini_SimulateDevices/中文说明.md)
-   - [Firefox - 模拟用户行为](samples/Gemini/Firefox/Gemini_SimulateUserActions/中文说明.md)
-   - [Firefox - 模拟不同设备](samples/Gemini/Firefox/Gemini_SimulateDevices/中文说明.md)
-   
-   > 注意: 
-   > 1. PhantomJS过气了，使用chrome headless，firefox headless替代 
-   > 2. Gemini也不被官方支持了，使用hermione
-   > 3. 对于html reporter这个插件, 在.gemini.js中使用：**html-reporter-legacy**
-
-## Hermione示例
-
-   - [Chrome - 模拟用户行为](samples/Hermione/Chrome/Hermione_SimulateUserActions/中文说明.md)
-   - [Chrome - 模拟不同设备](samples/Hermione/Chrome/Hermione_SimulateDevices/中文说明.md)
-   - [Firefox - 模拟用户行为](samples/Hermione/Firefox/Hermione_SimulateUserActions/中文说明.md)
-   - [Firefox - 模拟不同设备](samples/Hermione/Firefox/Hermione_SimulateDevices/中文说明.md)
-
-   > 注意: 
-   > 1. PhantomJS过气了，使用chrome headless，firefox headless替代 
-   > 2. 更多参考信息: [WebdriverIO API](https://webdriver.io/api.html), [issue-443](https://github.com/gemini-testing/hermione/issues/443), and [Chai Assert](https://www.chaijs.com/api/assert/)
 
 ## 系统信息
 
